<resources>
    <string name="app_name">RMAiS</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="action_map">Map</string>
    <string name="map_fragment_label">Map Fragment</string>

    <string name="action_list">List</string>
    <string name="list_fragment_label">List Fragment</string>

    <string name="infowindow_last_activation_date_label">Last activation:</string>
    <string name="infowindow_author_label">Author call sign:</string>
    <string name="infowindow_creation_date_label">Creation date:</string>
    <string name="infowindow_lat_label">Latitude:</string>
    <string name="infowindow_log_label">Longitude:</string>
    <string name="infowindow_loc_label">QTH Loc:</string>
    <string name="infowindow_activate_button">activate</string>
    <string name="infowindow_edit_button">edit</string>
    <string name="infowindow_delete_button">delete</string>
    <string name="infowindow_close_button">close</string>
    <string name="infowindow_map_button">map</string>

    <string name="addedit_add_fragment_label">Add Fragment</string>
    <string name="addedit_edit_fragment_label">Edit Fragment</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="addedit_radio_button_wff">WFF</string>
    <string name="addedit_radio_button_sota">SOTA</string>
    <string name="addedit_reference_prefix_label">Reference prefix:</string>
    <string name="addedit_reference_number_label">Reference number:</string>
    <string name="addedit_name_label">Name:</string>
    <string name="addedit_loc_label">QTH Loc:</string>
    <string name="addedit_lat_label">Latitude:</string>
    <string name="addedit_log_label">Longitude:</string>
    <string name="addedit_set_location_button">Set location</string>
    <string name="addedit_set_my_location_button">Set my location</string>
    <string name="addedit_add_button">Add</string>
    <string name="addedit_save_button">Save</string>
    <string name="addedit_cancel_button">Cancel</string>

    <string name="filter_title">FILTER</string>
    <string name="filter_field">Field:</string>

    <string name="filter_spinner_type">Type</string>
    <string name="filter_spinner_reference">Reference</string>
    <string name="filter_spinner_name">Name</string>
    <string name="filter_spinner_author">Author</string>
    <string name="filter_spinner_QTH_Loc">QTH Loc</string>
    <string name="filter_spinner_radius">Radius</string>
    <string name="filter_spinner_creation_date">Creation date</string>
    <string name="filter_spinner_last_activation_date">Last activation</string>
    <string-array name="filter_fields">
        <item>@string/filter_spinner_type</item>
        <item>@string/filter_spinner_reference</item>
        <item>@string/filter_spinner_name</item>
        <item>@string/filter_spinner_author</item>
        <item>@string/filter_spinner_QTH_Loc</item>
        <item>@string/filter_spinner_radius</item>
        <item>@string/filter_spinner_creation_date</item>
        <item>@string/filter_spinner_last_activation_date</item>
    </string-array>

    <string name="filter_value">Value:</string>
    <string name="filter_clear_all_button">Clear all filters</string>
    <string name="filter_apply_button">Apply filters</string>

    <string name="login_fragment_label">Login fragment</string>
    <string name="login_call_sign_label">Enter your call sign here</string>
    <string name="login_password_label">Enter your password here</string>
    <string name="login_login_button_label">Log in</string>
    <string name="login_register_button_label">Register</string>
    <string name="action_logout">Log out</string>

    <string name="register_fragment_label">Register fragment</string>
    <string name="register_call_sign_label">Call sign:</string>
    <string name="register_password_label">Password:</string>
    <string name="register_password_again_label">Password again:</string>
    <string name="register_register_button">Register</string>

    <string name="profile_fragment_label">Profile fragment</string>
    <string name="action_profile">Profile</string>
    <string name="profile_photo_label">Photo:</string>
    <string name="profile_name_label">Name:</string>
    <string name="profile_surname_label">Surname:</string>
    <string name="profile_phone_number_label">Phone number:</string>
    <string name="profile_cancel_button">Cancel</string>
    <string name="profile_update_button">Update</string>

    <string name="log_qso_fragment_label">Log QSO</string>
    <string name="log_qso_call_sign_label">Call sign:</string>
    <string name="log_qso_rst_sent_label">RST Sent:</string>
    <string name="log_qso_rst_recv_label">RST Recv:</string>
    <string name="log_qso_mode_label">Mode:</string>
    <string name="log_qso_band_label">Band:</string>
    <string name="log_qso_info_label">Info:</string>
    <string name="log_qso_log_button">Log</string>

    <string name="log_qso_cw_mode">CW</string>
    <string name="log_qso_ssb_mode">SSB</string>
    <string name="log_qso_fm_mode">FM</string>
    <string name="log_qso_digi_mode">DIGI</string>
    <string-array name="log_qso_modes">
        <item>@string/log_qso_cw_mode</item>
        <item>@string/log_qso_ssb_mode</item>
        <item>@string/log_qso_fm_mode</item>
        <item>@string/log_qso_digi_mode</item>
    </string-array>

    <string-array name="log_qso_bands">
        <item>1.8 MHz</item>
        <item>3.5 MHz</item>
        <item>5 MHz</item>
        <item>7 MHz</item>
        <item>10 MHz</item>
        <item>14 MHz</item>
        <item>18 MHz</item>
        <item>21 MHz</item>
        <item>24 MHz</item>
        <item>28 MHz</item>
        <item>50 MHz</item>
        <item>70 MHz</item>
        <item>144 MHz</item>
        <item>432 MHz</item>
    </string-array>

    <string name="action_list_users">List users</string>
    <string name="List_users_fragment_label">List users</string>

    <string name="lorem_ipsum">
        Welcome to my application! \n
        \n
        Usages: \n
        \t\t <b>1. Show objects:</b> Choose List or Map from menu. \n\n
        \t\t <b>2. Add objects:</b> Choose List or Map from menu. Then, click + button. \n\n
        \t\t <b>3. Show on map, activate, edit or delete:</b> Choose List or Map from menu. Choose object and click right button. \n\n
        \t\t <b>4. Edit profile:</b> Choose Profile from menu. \n\n
        \t\t <b>5. List users:</b> Choose List users from menu. \n\n
        \t\t <b>6. Filter objects:</b> Choose List or Map from menu. Then, click search button. \n\n
        \t\t <b>7. Log QSO:</b> Choose List or Map from menu. Choose object and click activate button. Then, input data and finally click log \n\n
        \t\t <b>7. Log out:</b> Choose Log out from menu. \n\n
    </string>
</resources>