<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    tools:context=".LogQSOFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_qso_call_sign_label" />
            <EditText
                android:id="@+id/log_qso_call_sign_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapCharacters" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_qso_rst_sent_label" />

            <EditText
                android:id="@+id/log_qso_rst_sent_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:inputType="number"
                android:text="599" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_qso_rst_recv_label" />

            <EditText
                android:id="@+id/log_qso_rst_recv_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:inputType="number"
                android:text="599" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_qso_mode_label" />

            <Spinner
                android:id="@+id/log_qso_mode_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_qso_band_label" />

            <Spinner
                android:id="@+id/log_qso_band_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_qso_info_label" />

            <EditText
                android:id="@+id/log_qso_info_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/log_qso_log_button"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/log_qso_log_button"
        android:textSize="48sp" />
</LinearLayout>